Contact alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1860,8 +1860,8 @@ input, select, textarea {
 		ul.links li {
 			display: inline-block;
 			border-left: solid 1px rgba(255, 255, 255, 0.05);
-			padding: 0 0 0 1em;
-			margin: 0 0 0 1em;
+			padding: 0 0 0 0;
+			margin: 0 0 0 0;
 		}
 
 			ul.links li:first-child {
